--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^5.1.0",
+    "https": "^1.0.0",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
