--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "crypto": "^1.0.1",
     "express": "^5.1.0",
     "https": "^1.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
